--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -3,7 +3,7 @@
 @import "compass/css3";
 @import "variables";
 @import "mixin";
-
+/* GENERAL STYLE */
 body{
 	background-color: $greyL2;
 	color:$grey;
@@ -12,18 +12,52 @@ body{
 	line-height: 1.5;
 	-webkit-font-smoothing:antialiased;
 	overflow-y:hidden;
+
+}
+.wrapper{
+	width:100%;
+	//padding:1em 1em 0.5em 1em;
+	overflow:hidden;
+	margin: auto;
+	margin-bottom: 1em;
+	box-sizing:border-box;
+	&:after{
+		@include clear();
+	}
+}
+h1,h2,h3,h4,h5,h6{
+	font-weight: 700;
+	color:$blue;
+	margin: 0 0 0.5em 0;
+	line-height: 1.1em;
+	text-align: center;
+
+}
+h1{
+	font-size: 3em;
+}h2{
+	font-size: 2.5em;
+}h3{
+	font-size: 2em;
+}h4{
+	font-size: 1.8em;
+}h5{
+	font-size: 1.5em;
+}h6{
+	font-size: 1.2em;
 }
 a{
 	text-decoration: none;
 	font-weight: 500;
-	color:$greyA;
+	color:$blue;
 	@include single-transition(all,0.5s,ease);
 	&:hover,&:focus{
-		color:$greyH
+		color:$blueH;
 	}
 }
 p{
 	text-align: justify;
+	margin-bottom: 1em;
 }
 ul{
 	list-style-type: none;
@@ -38,6 +72,15 @@ ul{
 
 	}
 }
+input,textarea,select,label{
+	width:100%;
+	display:inline-block;
+}
+input,textarea,select{
+	width:100%;
+	display:inline-block;
+	margin-bottom: 1em;
+}
 input{
 	background-color: #FFF;
 	border:2px solid $greyL2;
@@ -45,13 +88,14 @@ input{
 	color:black;
 	font-size: 15px;
 	text-align: left;
-	height:30px;
+	min-height:30px;
 	margin:0.2em 0 1em 0;
 	outline: none;
 	padding:0.5em;
 	-webkit-appearance: none;
 	box-sizing:border-box;
 	min-width: 100px;
+
 	&:hover{
 		border:2px solid $greyL2H;
 
@@ -71,7 +115,7 @@ input[type="submit"]{
 	min-width: 150px;
 	@include single-transition(all,0.5s,ease);
 	outline:none;
-	padding:0;
+	padding:0.5em 0;
 	&:hover,&:focus{
 		background-color: $blueH;
 	}
@@ -83,7 +127,7 @@ button{
 	min-width: 100px;
 	font-size: 15px;
 	@include border-radius(0.5em);
-	margin:1em 0;
+	margin:0em 0 1em 0;
 	background-color: $greyL2;
 	&:hover,&:focus{
 		background-color: $greyD;
@@ -94,14 +138,10 @@ textarea{
 	@extend input;
 	text-align: left;
 }
-select{
-	margin-right:1em;
-	width:100px;
-	color:$grey;
-}
 select {
+	//margin-right:1em;
+	color:$grey;
 	background: transparent;
-	width: 268px;
 	padding: 5px;
 	font-size: 16px;
 	line-height: 1;
@@ -144,11 +184,17 @@ select:focus{
 :-ms-input-placeholder {  
 	color: $grey;  
 }
+fieldset{
+	padding:1em 0.5em;
+	border:1px solid $greyL2;
+}
+/*END GENERAL STYLE*/
 .container{
 	background-color: #FFF;
 	max-width:$mw;
 	@include c( 12 );
 	margin: auto;
+	@include single-box-shadow(rgba(0,0,0,0.2),0,0,2em,2px);
 	&:after{
 		@include clear();
 	}
@@ -194,9 +240,10 @@ select:focus{
 		li{
 			background-color: $greyD;
 			margin-right: 1em;
-			min-width: 150px;
+			//min-width: 150px;
 			float:right;
 			@include single-transition(all,0.5s,ease);
+
 			&:hover,&:focus,&:active{
 				background-color: $greyDH;	
 			}
@@ -219,45 +266,22 @@ select:focus{
 	@include c( 12 );
 	margin: auto;
 	padding:0 1em;
-}
-.wrapper{
-	width:100%;
-	//padding:1em 1em 0.5em 1em;
-	overflow:hidden;
-	margin: auto;
-	margin-bottom: 3em;
-	box-sizing:border-box;
-	&:after{
-		@include clear();
-	}
-}
-h1,h2,h3,h4,h5,h6{
-	font-weight: 700;
-	color:$blue;
-	margin: 0 0 1em 0;
 
 }
-h1{
-	font-size: 3em;
-}h2{
-	font-size: 2.5em;
-}h3{
-	font-size: 2em;
-}h4{
-	font-size: 1.8em;
-}h5{
-	font-size: 1.5em;
-}h6{
-	font-size: 1.2em;
-}
+
 /* INDEX */
 
 .why{
-	@include cfl( 6 );
+	@include cfl( 12 );
+	margin-bottom: 1em;
 
 }
 .help{
-	@include cl( 6 );
+	@include cl( 12 );
+	margin-bottom: 1em;
+}
+.intro{
+	border-bottom: 1px solid $greyL2;
 }
 .icoRecherche{
 	text-align: center;
@@ -327,29 +351,27 @@ h1{
 	
 }
 #gmap{
-	height:400px;
-	width:80%;
-	@include cfl( 8 );
+	height:300px;
+	@include cfl( 12 );
 	display:block;
 	border:4px solid $greyL2;
 	box-sizing:border-box;
 	@include border-radius(0.5em);
 }
 .content{
-	width:80%;
+	@include c( 12 );
 	text-align: center;
 	span{
-		display:inline-block;
-		height:50px;
-		float:left;
+		
+		
 	}
 }
 .type{
-	display:inline-block;
+	display:block;
 	text-align: center;
-	
-	
-	height:50px;
+	@include c( 12 );
+	position:relative;	
+	//height:50px;
 	margin-bottom: 1em;
 	&:after{
 		@include clear();
@@ -357,19 +379,20 @@ h1{
 	input[type=radio]:checked + label{
 		background-color: $greyDH;
 	}
-	
+
 	label{
 		box-sizing:border-box;
-		display:block;
-		width:200px;
+		display:inline-block;
+		width:100%;
 		height:50px;
 		color:#FFF;
 		background-color: $greyD;
-		padding:1em;
+		padding:0.5em 0;
 		text-align: center;
+		vertical-align: center ;
 		font-weight: bold;
-		float:left;
-		margin-left: 1em;
+		//float:left;
+		margin: auto;	
 		cursor:pointer;
 		@include single-transition(all,0.5s,ease);
 		&:hover,&:focus{
@@ -388,20 +411,34 @@ h1{
 	
 }
 .mapInfo{
-	@include cl( 4 );
-	height:400px;
+	@include c( 12 );
+	
 
 	input,label{
-		display:block;
-		width:100%;
+
 	}
 	input{
 		
 	}
 }
 .classique{
-margin-bottom: 1em;
+	margin-bottom: 1em;
 
 }
 
 /*END INDEX*/
+
+/* FOOTER */
+
+footer{
+	background-color: $grey; 
+	color:white;
+	max-width:$mw;
+	@include c( 12 );
+	margin: auto;
+
+	.foot{
+		
+	}
+}
+/* END FOOTER */
