--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -55,6 +55,24 @@ a{
 		color:$blueH;
 	}
 }
+.informations{
+	background-color:rgba(20,100,30,0.2);
+	padding:1em 0.5em;
+	border:1px solid lighten(yellow,10%);
+	color:yellow;
+	span{
+		display:block;
+	}
+}
+.error{
+	background-color:rgba(250,50,30,0.2);
+	padding:1em 0.5em;
+	border:1px solid lighten(red,10%);
+	color:red;
+	span{
+		display:block;
+	}
+}
 p{
 	text-align: justify;
 	margin-bottom: 1em;
